--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VUE_APP_GIPHY_API_BASE_URL = http://api.giphy.com/v1
-VUE_APP_GIPHY_API_KEY = NBXog9M6DcEum5VpjtZsK2ZfChce1e1I
+VUE_APP_GIPHY_API_KEY = <INSERT-GIPHY-API-KEY>
